# pinocchio-mpl-metadata-examples

./: Cargo.toml
programs/pinocchio-mpl-metadata-examples/: Cargo.toml
programs/pinocchio-mpl-metadata-examples/src/: lib.rs
programs/pinocchio-mpl-metadata-examples/src/example/: create.rs  mod.rs
programs/pinocchio-mpl-metadata-examples/src/tests/: mod.rs
